[workspace]
members = [
    "bin/*",
    "ephemeris",
    "time_series",
    "binance/*"
]

[workspace.package]
version = "0.2.4"
authors = ["Lunar Engine <drew@lunarengine.xyz>"]
repository = "https://github.com/LunarEngine/lunar_engine"
homepage = "https://lunarengine.xyz/"
license = "Apache-2.0"
edition = "2021"