[workspace]
members = [
    "bin/cycles",
    "bin/date",
    "bin/fractals",
    "bin/hda",
    "bin/hda_pfs",
    "bin/hurst",
    "bin/pfs_days",
    "bin/pfs_months",
    "bin/pfs_years",
    "bin/returns",
    "ephemeris",
    "time_series",
    "binance/*",
    "alpaca/*"
]

[workspace.package]
version = "0.2.8"
authors = ["Lunar Engine <drew@lunarengine.xyz>"]
repository = "https://github.com/LunarEngine/lunar_engine"
homepage = "https://lunarengine.xyz/"
license = "Apache-2.0"
edition = "2021"