[package]
name = "ephemeris"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal dependencies
time_series = { path = "../time_series" }
# external dependencies
chrono = "0.4.22"
log = "0.4"
simplelog = "0.12.0"
reqwest = { version = "0.11.6", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.22.0", features = ["full"] }
csv = "1.1.6"