[package]
name = "alpaca_plpl"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
# internal deps
ephemeris = { path = "../../ephemeris" }
time_series = { path = "../../time_series" }
# external deps
apca = "0.27.2"
tokio = { version = "1.24.1", features = ["full"] }
log = "0.4"
simplelog = "0.12.0"
chrono = "0.4.22"
lazy_static = "1.4.0"
time = "0.3.14"
crossbeam = "0.8.2"
colored = "2.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
num-decimal = {version = "0.2.4", default-features = false, features = ["num-v04", "serde"]}
tungstenite = { version = "0.18.0", features = ["native-tls"] }