[package]
name = "binance_plpl"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal deps
ephemeris = { path = "../../ephemeris" }
time_series = { path = "../../time_series" }
binance_lib = { path = "../binance_lib" }
# external deps
tokio = { version = "1.24.1", features = ["full"] }
log = "0.4"
simplelog = "0.12.0"
chrono = "0.4.22"
lazy_static = "1.4.0"
time = "0.3.14"
crossbeam = "0.8.2"
colored = "2.0.4"