[package]
name = "server"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binance_lib = { path = "../binance_lib" }
time_series = { path = "../../time_series" }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
chrono = "0.4.22"
regex = "1.7.3"
tokio = { version = "1.24.1", features = ["full"] }
hex = "0.4"
hmac = "0.12.1"
sha2 = "0.10.6"
reqwest = { version = "0.11.6", features = ["blocking", "json"] }
url = "2.2.2"
error-chain = { version = "0.12.4", default-features = false }
lazy_static = "1.4.0"
simplelog = "0.12.0"
log = "0.4"
time = "0.3.14"
tungstenite = { version = "0.18.0", features = ["native-tls"] }